--- a/next/src/app/globals.css
+++ b/next/src/app/globals.css
@@ -48,3 +48,7 @@ html {
     transform: translateY(calc(-50%));
   }
 }
+
+/* .menu-link {
+  @apply text-white hover:bg-gray-700 transition duration-150 font-medium hover:text-white py-2 px-3 inline-flex items-center font-display outline-none rounded-button;
+} */
